--- a/src/ui/template/404.html
+++ b/src/ui/template/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
+    <link rel="shortcut icon" href="e.ico" type="image/x-icon">
     <link rel="stylesheet" href="404.css">
 </head>
 <body>
