--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="shortcut icon" href="w.ico" type="image/x-icon">
 </head>
 <body>
+    <nav><a href="/logout.html">Logout</a><br/></nav>
+    
     <h1 id="wel">Welcome {{ user.name }}</h1>
-        <a href="/logout.html">logout</a><br/>
+        
     
         {% if user.admin %}
             Hey, admin.
@@ -18,13 +21,13 @@
                 <input name="name"
                         type="text"
                         minlength=5
+                        id="resname"
                         placeholder="Restaurant Name"
                         size=25
                         title="The Restaurant Name"
                         requred autofocus />
-                <input type="submit" value="create"/>
+                <input type="submit" id="createbtn"  value="Create"/>
             </form>
-    
             <h2 id="user">Users</h2>
             <ul>
             {% for user in user_list %}
@@ -52,6 +55,16 @@
     <style>
         #wel,#res,#user,#cr{
             font-family: Arial, Helvetica, sans-serif;
+        }
+        #resname{
+            width: 20em;
+            height: 3em;
+            font-size: 15px;
+        }
+        #createbtn{
+            width: 8em;
+            height: 2.5em;
+            font-size: 15px;
         }
     </style>
     </body>
