--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -27,7 +27,7 @@
                         placeholder="Restaurant Name"
                         size=25
                         title="The Restaurant Name"
-                        requred autofocus />
+                        required autofocus />
                 <input type="submit" value="create"/>
             </form>
 
