--- a/src/ui/template/404.html
+++ b/src/ui/template/404.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
-    <link rel="stylesheet" href="/404.css">
+    <link rel="shortcut icon" href="e.ico" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="/404.css"> -->
+    <style>
+        h1{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+        }
+        body{
+            background-image: url("error404.png");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
+    
 
 </body>
 </html>
