--- a/src/ui/template/restaurant.html
+++ b/src/ui/template/restaurant.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="r.ico" type="image/x-icon">
+        <title>Restaurant</title>
+    </head>
+    <body>
 <h1>{{ restaurant.name }}</h1>
 
     {% if user.admin %}
