--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Welcome</title>
+        <link rel="shortcut icon" href="w.ico" type="image/x-icon">
         <style>
             #wel,#res,#user,#cr{
                 font-family: Arial, Helvetica, sans-serif;
