--- a/src/ui/template/restaurant.html
+++ b/src/ui/template/restaurant.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="r.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/r.ico" type="image/x-icon">
         <title>Restaurant</title>
     </head>
-   
+
     <script>
 
     {% if user.id == restaurant.gm_id %}
